--- CHANGELOG ---

--- PyFMI-X.X ---
    * Fixed issue with wrong return of time varying variables (ticket:5597)
    * Added functionality to set enumerations with strings (ticket:5587)
    * Changed so that the FMU is only unzipped once (for performance) (ticket:5551)
    * Changed so that the log is stored in memory during load_fmu call (ticket:5550)
    * Added option to limit the maximum size of the log file (ticket:5089)
    * Fixed memory leak when getting the dependency information (ticket:5553)
    * Deprecated get_log_file_name in favour of get_log_filename (ticket:5548)
    * Implemented support for injecting custom logging functionality (ticket:5545)
    * Added the possibility to retrieve unit/display unit name for FMI2
      and its value in the display unit (ticket:5537)
    * Added possibility to get a scalar variable directly (ticket:5521)
    * Fixed problem with binary saving (integer start time) (ticket:5496)
    * Updated the interactive info on the load_fmu method (ticket:5495)
    * Changed default file storing method to binary (ticket:5479)
    * Fixed issue with getting parameters when using memory storage option (ticket:5476)
    * Added support for getting the declared type for FMI2 (ticket:5475)
    * Added option to store result files on binary format (ticket:5470)
    * Improved method to retrieve model variables (ticket:5469)
    * Added a prototype of a Master algorithm for coupled ME FMUs (ticket:5438)
    * Fixed so that a "none" result handler can be used for CS (ticket:5403)
    * Removed deprecated FMUModel (ticket:5315)
    * Updated attributes to the initialize methods to be consistent between
      FMI1 and FMI2. Also added so that setup_experiment is called through
      FMI2.initialze() if not already called (ticket:5322).
    * Added option "maxh" (maximum step-size) to the Master algorithm (ticket:5396)
    * Fixed bug with step outside simulation region for the Master algorithm (ticket:5397)

--- PyFMI-2.4 ---